# TpFinal-Algorimo

./: .gitmodules  CMakeLists.txt  INSTALL.md  TpFinal.cpp
include/: Dijkstra.h  arbolBinario.h  cola.h  inputJSON.h  structs.h  terminal.h
jsonfiles/: config (copia).json  config.json
src/: Dijkstra.cpp  TpFinal.cpp  arbolBinario.h  cola.h  inputJSON.cpp  structs.h  terminal.h
